[project]
name = "mltoolhub"
version = "0.0.1"
authors = [
  { name="Kishan Mishra", email="kishanmldev@gmail.com" },
]
description = "A lightweight toolkit for faster model building."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
