[project]
name = "mltoolhub"
version = "0.0.3"
authors = [
    { "name" = "Your Name", "email" = "your.email@example.com" }
]
description = "A lightweight toolkit for faster model building."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
]

[tool.setuptools.packages.find]
include = ["mltoolhub*"]
exclude = ["tutorials*"]